replaced new Integer() with Integer.getValue() removed some system.out or converted them to logger blabla